<resources>
    <string name="app_name">TravelJournal</string>
    <string name="moments">Moments</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="contact">Contact</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Empty</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price">Price:</string>
    <string name="destination">Destination:</string>
    <string name="insert_destination_name">Insert destination name</string>
    <string name="insert_trip_name">Insert trip name</string>
    <string name="insert_trip_price">Insert trip price</string>
    <string name="select_the_end_date">Select the end date:</string>
    <string name="choose_your_trip_type">Choose your trip type:</string>
    <string name="select_the_start_date">Select the start date:</string>
    <string name="rate_your_trip">Rate your trip:</string>
    <string name="about">About</string>
    <string name="get_weather">Get Weather</string>
    <string name="update">Update</string>
    <string name="application_logo">application logo</string>
    <string name="add_new_trip_button">Add new trip button</string>
    <string name="trip_picture">Trip picture</string>
    <string name="gloria_popa">Gloria Popa</string>
    <string name="gloria_popa16_gmail_com">gloria.popa16@gmail.com</string>
    <string name="account_circle_image">Account circle image</string>
    <string name="star_image">Star image</string>
    <string name="about_us">About us</string>
    <string name="moments_is_a_free_mobile_application_that_allows_you_to_capture_your_travels_in_a_digital_diary_n_nwhen_you_use_a_digital_travel_journal_you_need_only_slip_your_smartphone_into_your_waistpack_and_let_the_travel_adventures_get_under_way">Moments is a free mobile application that allows you to capture your travels in a digital diary.\n\nWhen you use a digital travel journal you need only slip your smartphone into your waistpack and let the travel adventures get under way.</string>
</resources>