<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_176"
    android:background="@drawable/bg_gradient"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16"
    android:theme="@style/ThemeOverlay.AppCompat.Light">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_account_circle_black"
        android:contentDescription="@string/account_circle_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_8"
        android:text="@string/gloria_popa"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_8"
        android:text="@string/gloria_popa16_gmail_com"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black" />

</LinearLayout>