<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TripDetailsFragment">

    <ImageView
        android:id="@+id/tripPicture"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tripName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripPicture" />

    <ImageView
        android:id="@+id/star"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tripName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tripName"
        app:srcCompat="@drawable/ic_baseline_star_24" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/star"
        app:layout_constraintEnd_toStartOf="@+id/star"
        app:layout_constraintTop_toTopOf="@+id/star" />

    <TextView
        android:id="@+id/destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="DEST"
        android:textColor="#044363"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripName" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/price"
        android:textColor="#044363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destination" />

    <TextView
        android:id="@+id/destinationValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/destination"
        app:layout_constraintStart_toEndOf="@+id/destination"
        app:layout_constraintTop_toTopOf="@+id/destination" />

    <TextView
        android:id="@+id/priceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/price"
        app:layout_constraintStart_toEndOf="@+id/price"
        app:layout_constraintTop_toTopOf="@+id/price" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="@+id/getWeather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toEndOf="@+id/getWeather"
        app:layout_constraintTop_toTopOf="@+id/getWeather" />

    <Button
        android:id="@+id/getWeather"
        android:layout_width="208dp"
        android:layout_height="47dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/bg_gradient"
        android:fontFamily="casual"
        android:text="@string/get_weather"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/about"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tripAbout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/tripAbout"
        android:layout_width="360dp"
        android:layout_height="134dp"
        android:layout_marginBottom="12dp"
        android:justificationMode="inter_word"
        app:layout_constraintBottom_toTopOf="@+id/getWeather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>